--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "discord.js": "^13.6.0",
     "ffmpeg-static": "^4.4.1",
     "libsodium-wrappers": "^0.7.10",
-    "prism-media": "^1.3.2",
-    "ytdl-core": "^4.11.0"
+    "prism-media": "^1.3.2"
   }
 }
