[Update] Kurozora Search - Added CharacterStatus enum - Added SearchType enum - Added support for searching characters - Removed `find` command in favor of `search` command - Updated search to use the new API

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,9 @@ AM_DEVELOPER_TOKEN=
 AM_TEAM_ID=
 AM_KEY_ID=
 
+# Kurozora
+KUROZORA_URL=https://api.kurozora.app
+
 # Spotify
 SPOTIFY_CLIENT_ID=
 SPOTIFY_CLIENT_SECRET=
