--- a/package.json
+++ b/package.json
@@ -7,11 +7,19 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
+    "discord",
+    "discordjs",
     "kurozora",
     "anime",
     "manga",
     "music",
-    "search"
+    "search",
+    "slash commands",
+    "poll",
+    "image",
+    "cat",
+    "dog",
+    "fox"
   ],
   "author": "Kirito",
   "license": "All Rights Reserved",
@@ -31,7 +39,10 @@
     "dotenv": "^16.0.1",
     "ffmpeg-static": "^5.0.0",
     "libsodium-wrappers": "^0.7.10",
+    "moment": "^2.29.4",
     "node-musickit-api": "^2.1.1",
-    "qs": "^6.10.3"
+    "qs": "^6.10.3",
+    "sqlite": "^4.1.2",
+    "sqlite3": "^5.0.11"
   }
 }
