--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,9 @@ AM_KEY_ID=
 # Kurozora
 KUROZORA_URL=https://api.kurozora.app
 
+# Satou-chan
+SATOU_CHAN_URL=https://api.satou-chan.xyz
+
 # Spotify
 SPOTIFY_CLIENT_ID=
 SPOTIFY_CLIENT_SECRET=
