[Update] Refactor Project - Added assets - Added README - Added LICENSE - Refactored where necessary - Updated NPM packages

--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,10 @@ AM_KEY_ID=
 KUROZORA_URL=https://api.kurozora.app
 
 # Satou-chan
-SATOU_CHAN_URL=https://api.satou-chan.xyz
+SATOU_CHAN_URL=https://api.satou-chan.xyz/api/endpoint/
+
+# Kisara
+KISARA_URL=https://apiservice1.kisara.app/satou/api/endpoint/
 
 # Spotify
 SPOTIFY_CLIENT_ID=
