[Fix] Kurozora Links - Fixed generated URL to point at base URL instead of API - Updated .env

--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,8 @@ AM_TEAM_ID=
 AM_KEY_ID=
 
 # Kurozora
-KUROZORA_URL=https://api.kurozora.app
+KUROZORA_URL=https://kurozora.app
+KUROZORA_API_URL=https://api.kurozora.app
 
 # Satou-chan
 SATOU_CHAN_URL=https://api.satou-chan.xyz/api/endpoint/
