--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "libsodium-wrappers": "^0.7.10",
     "moment": "^2.29.4",
     "node-musickit-api": "^2.1.1",
+    "play-dl": "^1.9.6",
     "qs": "^6.10.3",
     "sqlite": "^4.1.2",
     "sqlite3": "^5.0.11"
