--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# DS Store
+.DS_Store
+
 # Logs
 logs
 *.log
@@ -127,6 +130,11 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+# IDE
+/.fleet
+/.idea
+/.vscode
 
 # Kurozora Bot
 database/main.db
